err/aliyun-python-sdk-release-test.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aliyun_python_sdk_core-2.3.5.egg-info'...
Listing './lib/python3.5/site-packages/aliyun_python_sdk_release_test-2.2.15.egg-info'...
Listing './lib/python3.5/site-packages/aliyunsdkcore'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/__init__.py'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/acs_exception'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/acs_exception/__init__.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/acs_exception/error_code.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/acs_exception/error_msg.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/acs_exception/error_type.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/acs_exception/exceptions.py'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/auth'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/__init__.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/md5_tool.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/oss_signature_composer.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/roa_signature_composer.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/rpc_signature_composer.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/sha_hmac1.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/sha_hmac256.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/auth/url_encoder.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/client.py'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/http'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/__init__.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/format_type.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/http/format_type.py", line 48
    print map_format_to_accept(XML)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/http_request.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/http_response.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/method_type.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/http/protocol_type.py'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/profile'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/profile/__init__.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/profile/location_service.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/profile/region_provider.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/profile/region_provider.py", line 147
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/aliyunsdkcore/request.py'...
Listing './lib/python3.5/site-packages/aliyunsdkcore/utils'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/utils/__init__.py'...
Compiling './lib/python3.5/site-packages/aliyunsdkcore/utils/parameter_helper.py'...
***   File "./lib/python3.5/site-packages/aliyunsdkcore/utils/parameter_helper.py", line 65
    print get_uuid()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
